fix case-profile